@@ -1,3 +1,12 @@
+2001-11-04  Mike Kestner <mkestner@speakeasy.net>
+
+	* codegen/defs-parse.pl : struct generation.  Added float and double
+	type mapping entries.
+	* codegen/hardcoded.defs : GdkGeometry definition.  define-struct
+	doesn't appear to be supported in the current defs files.  This file
+	will be used for manual definition of unsupported defs.
+	* codegen/makefile : add hardcoded.defs.
+
 2001-11-02  Mike Kestner <mkestner@speakeasy.net>
 
 	* codegen/defs-parse.pl : define-struct detection.  Partial ctor
